added mobile nav bar functionality

--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <title>grid practice</title>
+  <title>The Void</title>
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+  <script src="script.js">
+
+  </script>
 
 </head>
 <body>
   <div class="wrapper">
+    <i class="fas fa-bars bars fa-4x" onclick="myFunction()"></i>
+
     <nav class="main-nav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Parallel Life</a></li>
-        <li><a href="#">Mystery</a></li>
-        <li><a href="#">Contact</a></li>
+
+      <ul class="nav">
+        <li><a href="#" >Home</a></li>
+        <li><a href="#" >Parallel Life</a></li>
+        <li><a href="#" >Mystery</a></li>
+        <li><a href="#" >Contact</a></li>
+
       </ul>
     </nav>
     <header>
@@ -25,7 +32,7 @@
     </header>
 
     <section class="showcase">
-      <img src="images/img-1.jpg" alt="">
+      <img src="images/img-1.jpg" id="showcase-photo" alt="">
     </section>
 
     <section class="holiday-sale">
@@ -78,36 +85,29 @@
       <div>
         <h3>Contact</h3>
         <div>
-          theabyss@gmail.com <br>
-          tel: 999-999-9999 <br>
-          address: 111 N Cloud Way <br>
+          theabyss@gmail.com<br>
+          tel: 999-999-9999<br>
+          address: 111 N Cloud Way<br>
         </div>
-
         <h3>Correspodence</h3>
-        <p>
-          P.O box 7429 <br>
-          Aurora, Ln <br>
-          Egypt, Las Vegas <br>
-
-        </p>
-
-
+        <div>P.O box 7429<br>
+          Aurora, Ln<br>
+          Egypt, Las Vegas<br>
+        </div>
       </div>
       <div>
         <h3>Links</h3>
-        <p>
-          portal <br>
+        <div>portal <br>
           infinity <br>
           eternity <br>
           time travel <br>
           lava <br>
           earth <br>
-        </p>
+        </div>
       </div>
       <div>
         <h3>Return</h3>
-        <p>
-          for a new take on the old world please look deeper into your life. you won't know until you never give up.
+        <p>for a new take on the old world please look deeper into your life. you won't know until you never give up.
         </p>
       </div>
     </footer>
